viele neue Funktionen

--- a/index-original.html
+++ b/index-original.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
@@ -12,7 +11,7 @@
 </head>
 <body>
 
-<h1>Training: Lesen und hören</h1> 
+<h1>Training: Lesen und hören</h1>
 
 <p>
     Hier kannst du Texte lesen oder hören. <br>
@@ -20,29 +19,16 @@
     <br><br>
 </p>
 
-<p><img src="mat/muster2.png" alt="Muster" width="100%"></p> 
-<br> 
+<p>
+    <img src="mat/muster3.png" alt="Muster" width="100%">
+</p>
 
-<p> 
-Die Spanisch-Brötili-Bahn 
-<a href="mat/spanisch-broetli-bahn-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/spanisch-broetli-bahn-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<p> 
-Mittelalter: Leben auf dem Land 
-<a href="mat/landleben-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/landleben-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<p> 
-Test: Leben auf dem Land 
-<a href="mat/test-landleben-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/test-landleben-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<br> 
-<p><img src="mat/muster1.png" alt="Muster" width="100%"></p> 
+<p>
+    Mittelalter: Leben auf dem Land: 
+    <a href="mat/Mittelalter-Leben-auf-dem-Land-text.html" target="_blank"> Lesen</a> &nbsp;
+    <a href="mat/Mittelalter-Leben-auf-dem-Land-audio.html" target="_blank">
+        hören</a>
+</p>
 
 </body>
 </html>
