--- a/index.neu.html
+++ b/index.neu.html
@@ -20,29 +20,5 @@
     <br><br>
 </p>
 
-<p><img src="mat/muster2.png" alt="Muster" width="100%"></p> 
-<br> 
-
-<p> 
-Die Spanisch-Brötili-Bahn 
-<a href="mat/spanisch-broetli-bahn-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/spanisch-broetli-bahn-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<p> 
-Mittelalter: Leben auf dem Land 
-<a href="mat/landleben-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/landleben-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<p> 
-Test: Leben auf dem Land 
-<a href="mat/test-landleben-text.html" target="_blank"> Lesen</a> &nbsp; 
-<a href="mat/test-landleben-audio.html" target="_blank"> hören</a> 
-</p> 
-
-<br> 
-<p><img src="mat/muster1.png" alt="Muster" width="100%"></p> 
-
-</body>
+<p><img src="mat/muster2.png" alt="Muster" width="100%"></p></body> 
 </html>
