--- a/mat/landleben-audio.html
+++ b/mat/landleben-audio.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
@@ -11,7 +12,7 @@
 </head>
 <body>
 
-<h1>Mittelalter: Leben auf dem Land</h1>
+<h1>Mittelalter: Leben auf dem Land</h1> 
 
 <p>
     <ul>
@@ -24,13 +25,13 @@
     </ul>
 </p>
 
-<p>
-    <a href="Mittelalter-Leben-auf-dem-Land.mp3" target="_blank">Hörtext</a>
-</p>
 
-<p>
-    <img src="muster2.png" alt="Muster" width="100%">
-</p>
+<p><img src="muster1.png" alt="Muster" width="100%"></p> 
+
+<p><a href="landleben.mp3" target="_blank">Hörtext</a></p> 
+
+
+<p><img src="muster1.png" alt="Muster" width="100%"></p> 
 
 <h2>Fragen</h2>
 <p>
@@ -50,6 +51,7 @@
 </ol>
 </p>
 
+<p><img src="muster2.png" alt="Muster" width="100%"></p> 
 
 <h2>Antworten</h2>
 <p>
@@ -83,5 +85,7 @@
     </details>
 </p>
 
-</body>
-</html>
+<p><img src="muster1.png" alt="Muster" width="100%"></p> 
+
+</body> 
+</html> 
