--- a/mat/test-landleben-text.html
+++ b/mat/test-landleben-text.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
@@ -11,26 +12,88 @@
 </head>
 <body>
 
-<h1>Mittelalter: Leben auf dem Land</h1>
+<h1>Test: Leben auf dem Land</h1> 
 
 <p>
     <ul>
-        <li>Mache dir <strong>Notizen.</strong></li>
-        <li>Tipp: Du kannst den Hörtext stoppen und dann schreiben.</li>
-        <li>Du kannst den Text auch nochmals hören.</li>
-        <li>Beantworte die Fragen <strong>nach</strong> dem Hören schriftlich.</li>
+        <li>Lies den Text genau und mache dir <strong>Notizen.</strong></li>
+        <li>Du kannst den Text auch nochmals lesen.</li>
+        <li>Beantworte die Fragen <strong>nach</strong> dem Lesen schriftlich.</li>
         <li>Schreibe ganze Sätze als Antworten.</li>
-        <li>Kontrolliere deine Antworten, vielleicht musst du den Text nochmals hören.</li>
+        <li>Kontrolliere deine Antworten, vielleicht musst du den Text nochmals lesen.</li>
     </ul>
 </p>
 
-<p>
-    <a href="Mittelalter-Leben-auf-dem-Land.mp3" target="_blank">Hörtext</a>
-</p>
+
+<p><img src="muster2.png" alt="Muster" width="100%"></p> 
+
+<h2>Text</h2> 
+Als die Glocke vom Kloster läutet, wacht die
+elfjährige Käthi auf. Sie schüttelt das Stroh von
+ihrem Kleid und zieht sich schnell an. Im
+Morgengrauen geht sie mit ihrer Mutter und ihren
+Geschwistern zur Kirche im Dorf. Der Priester, Pater
+Gabriel, spricht ein Gebet auf Lateinisch und gibt
+den Segen. Kurz danach, als die ersten
+Sonnenstrahlen ins Zimmer scheinen, essen alle
+kalten Getreidebrei.
+
+Die jüngeren Geschwister und die Mutter arbeiten
+dann im Gemüsegarten vor dem Haus. Käthi muss
+aufs Feld gehen. Im Mai muss man alles Unkraut
+entfernen.
+Käthi geht an der Gemeindewiese vorbei zum
+Dorfrand, wo die Felder sind. Nachts hat es
+geregnet und die Erde unter ihren Füssen ist
+weich. Mit einem spitzen Stück Holz lockert Käthi
+den Boden und zieht das Unkraut heraus. Das ist
+nicht so anstrengend wie die Arbeit im März, wenn
+sie mit ihrem Vater den Acker bearbeitet.
+
+
+Nach dem Mittagessen gibt ihr die Mutter drei tote
+Hühner und 20 Eier. Das sind die Abgaben für das
+Kloster. Käthi geht den Hügel hinauf und bringt
+alles zum Mönch Severin. Dieser schickt sie dann
+zum Kräutergarten, um Steine aus den Beeten zu
+nehmen.
+
+Dreimal in der Woche arbeitet Käthi hier ohne
+Bezahlung. Die Arbeit im Kräutergarten ist
+spannender als die Arbeit im Dorf. Käthi lernt neue
+Kräuter kennen und die Mönche erklären ihr,
+gegen welche Krankheiten sie helfen.
+
+Den Gottesdienst am Abend besucht Käthi mit
+allen Dorfbewohnern in der Kirche. Danach hilft
+sie der Mutter beim Kochen des Abendessens:
+Eintopf aus Erbsen, Speck und Rüben. Im letzten
+Tageslicht beginnt Käthi noch, den Mantel ihres
+Vaters zu nähen. Die Mutter spinnt Wolle zu Garn.
+Doch als Käthi nichts mehr sehen kann, streut sie
+etwas frisches Stroh auf ihre Schlafecke und
+schläft sehr müde ein.
 
 <p>
-    <img src="muster2.png" alt="Muster" width="100%">
-</p>
+    Wer nicht flüssig lesen kann, arbeitet sich mühsam Wort für Wort durch einen Text und schafft es kaum, Zusammenhänge zu erfassen. 
+    Diese Schülerinnen und Schüler empfinden das Lesen als permanente Anstrengung und Bedrohung — so schließt sich ein Teufelskreis des Nichtlesens.
+    </p>
+    <p>
+    Die Literaturdidaktikerin Prof. Dr. Cornelia Rosebrock von der Goethe-Universität Frankfurt am Main bringt es auf den Punkt: 
+    Wer nur unter Anstrengungen lesen kann, für den wird Lesen zum „roten Tuch“. 
+    Und je weniger man liest, desto größer werden die Defizite. 
+    </p>
+    <p>
+    Deshalb ist es wichtig, die Lesefähigkeit von Kindern und Jugendlichen systematisch zu fördern. 
+    Denn Kindern, die nicht flüssig lesen lernen, werden Chancen verbaut. 
+    Lesen ist eine Schlüsselkompetenz, die viele Lebensbereiche öffnet: 
+    In der Schule ist Textverständnis in allen Fächern die Voraussetzung dafür, dass man dem Unterricht folgen kann. 
+    Es ist die Grundlage für die Qualifizierung in Ausbildung und Beruf und Basis der Teilhabe am gesellschaftlichen und kulturellen Leben.
+    </p>
+    <p>
+    </p>
+    
+<p><img src="muster1.png" alt="Muster" width="100%"></p> 
 
 <h2>Fragen</h2>
 <p>
@@ -50,6 +113,7 @@
 </ol>
 </p>
 
+<p><img src="muster3.png" alt="Muster" width="100%"></p> 
 
 <h2>Antworten</h2>
 <p>
@@ -83,5 +147,7 @@
     </details>
 </p>
 
-</body>
-</html>
+<p><img src="muster3.png" alt="Muster" width="100%"></p> 
+
+</body> 
+</html> 
